Test OT149-13: Unit test + Integration test endpoints /users